# SecondWife

./: .gitignore  CMakeLists.txt  CMakeSettings.json  include.rar
common/: CMakeLists.txt  bitops.h  platform.h
common/logger/: log.cpp  log.h
common/message/: g2t_message.h  msg_def.h  t2g_message.h
configs/: game_server.conf
game_server/: CMakeLists.txt  game_server.cpp  game_server.h  main.cpp
game_server/connects/gate/: gate_message_handler.cpp  gate_message_handler.h  gate_net.cpp  gate_net.h
game_server/message_handlers/: gate_message_handler.cpp  gate_message_handler.h
game_server/services/: gate_service.cpp  gate_service.h
include/: CMakeLists.txt
include/common/: bitops.h  delegate.h  node.h  noncopyable.h  process_error.h  type_int.h
include/common/logger/: easylogging++.h  log.h
include/mtl/: map  memory
include/mtl/design_pattern/: singleton.h
include/mtl/memory/: allocator.h  chunk.h  chunk_allocator.h  construct.h  memory_resource.h  small_pool_resource.h  syn_bounded_allocator.h  sync_bounded_memory_resource.h
include/mtl/memorymgr/: allocator.h  construct.h
include/mtl/pool/: bounded_object_pool.h  chunk_pool.h  object_pool.h  unbounded_object_pool.h
include/mtl/struct/: circle_buffer.h  circle_list.h  free_list.h  ring_buffer.h  stack.h
include/mtl/struct/lock_free/: free_list.h  stack.h  tagged_ptr.h
include/mtl/struct/tree/: bs_tree.h  map.h  print_tree.h  rb_tree.h
include/mtl/thread/: lock.h  lock_guard.h  mutex_lock.hpp  null_lock.hpp  spin_lock.hpp
libs/: libtcmalloc_minimal.lib
mtl/design_pattern/: singleton.h
mtl/memory/: allocator.h  chunk.h  memory_resource.h  monotonic_buffer_resource.h
mtl/operation/: op_queue.hpp  operation.h
mtl/pool/: chunk_pool.h  object_pool.h  thread_pool.hpp
mtl/struct/: circle_list.h  free_list.h  ring_buffer.h
mtl/struct/lock_free/: chunk.h  queue.h  tagged_ptr.h
mtl/struct/tree/: bs_tree.h  map.h  rb_tree.h
mtl/thread/: null_lock.hpp  spin_lock.hpp
net/: CMakeLists.txt  address.cpp  address.h  address_v4.cpp  address_v4.h  address_v6.cpp  address_v6.h  buffer.hpp  descriptor_data.h  endpoint.cpp  endpoint.h  message_handler.h  message_handler_basic.hpp  msg_header.h  net.cpp  net.h  net.rar  package_allocator.hpp  server.cpp  server.h  server_net_base.h  session_map.h  session_mgr.cpp  session_mgr.h  socket_acceptor.cpp  socket_acceptor.h  socket_net_basic.h  socket_ops.cpp  socket_ops.h  socket_session.cpp  socket_session.h  socket_types.h  user_session.h
net/epoll/: accept.h  acceptor.h  descriptor.h  epoll.cpp  epoll.h  session.cpp  session.h
net/events/: event_base.h
net/iocp/: iocp.cpp  iocp.h
net/ip/: address.cpp  address.h  address_v4.cpp  address_v4.h  address_v6.cpp  address_v6.h  tcp.h
